add and update places

--- a/app/_posts/2015-03-01-Amarello.md
+++ b/app/_posts/2015-03-01-Amarello.md
@@ -2,8 +2,9 @@
 layout: place
 title:  "Amarelo"
 subtitle: "--"
-description: "é um centro cultural."
+description: " é um centro cultural."
 address: "Rua Três Rios, 252, Bom Retiro."
 coordinates: "-23º 31’ 45.33” -46º 38’ 11.95”"
-enabled: enabled
+enabled: disabled
+permalink: "amarello.html"
 ---
