conteúdo dos posts

--- a/app/_posts/2015-03-01-Pivo.md
+++ b/app/_posts/2015-03-01-Pivo.md
@@ -2,7 +2,7 @@
 layout: place
 title:  "Pivô"
 subtitle: "--"
-description: " é uma galeria de arte no Copan."
+description: " é uma centro cultural no Copan."
 address: "Avenida Ipiranga, 200, República."
 coordinates: "-23º 32’ 45.86” -46º 38’ 40.89”"
 enabled: disabled
