--- a/app/_posts/2015-03-01-Amarello.md
+++ b/app/_posts/2015-03-01-Amarello.md
@@ -1,10 +1,10 @@
 ---
 layout: place
-title:  "Amarelo"
+title:  "Amarello"
 subtitle: "--"
-description: " é um centro cultural."
-address: "Rua Três Rios, 252, Bom Retiro."
-coordinates: "-23º 31’ 45.33” -46º 38’ 11.95”"
+description: " é uma editora."
+address: "Rua Libero Badaró, 336, Sé."
+coordinates: "-23º 32’ 47.84” -46º 38’ 10.87”"
 enabled: disabled
 permalink: "amarello.html"
 ---
