--- a/app/_posts/2015-03-01-Garagem.md
+++ b/app/_posts/2015-03-01-Garagem.md
@@ -3,8 +3,8 @@ layout: place
 weight:  8
 title:  "Garagem"
 subtitle: "--"
-description: " é um laboratório de fabricação."
-address: "Praça General Craveiro Lopes, 19, República."
+description: " é um laboratório de fabricação digital."
+address: "Rua Doutor Ribeiro de Almeida, 166, Barra Funda."
 coordinates: "-23º 33’ 3.78” -46º 38’ 31.36”"
 enabled: disabled
 permalink: "garagem.html"
