--- a/app/_posts/2015-03-01-Pivo.md
+++ b/app/_posts/2015-03-01-Pivo.md
@@ -3,7 +3,7 @@ layout: place
 weight:  16
 title:  "Pivô"
 subtitle: "--"
-description: " é uma centro cultural no Copan."
+description: " é um centro cultural no Copan."
 address: "Avenida Ipiranga, 200, República."
 coordinates: "-23º 32’ 45.86” -46º 38’ 40.89”"
 enabled: disabled
