--- a/app/_posts/2015-03-01-Amarello.md
+++ b/app/_posts/2015-03-01-Amarello.md
@@ -8,4 +8,8 @@ address: "Rua Libero Badaró, 336, Sé."
 coordinates: "-23º 32’ 47.84” -46º 38’ 10.87”"
 enabled: disabled
 permalink: "amarello.html"
+top: "61.5%"
+left: "49.7%"
+bottom: "33.7%"
+letter: "A"
 ---
