--- a/app/_posts/2015-03-01-Fluxo.md
+++ b/app/_posts/2015-03-01-Fluxo.md
@@ -8,4 +8,8 @@ address: "Rua Capitão Salomão, 26, República."
 coordinates: "-23º 32’ 34.53” -46º 38’ 12.04”"
 enabled: disabled
 permalink: "fluxo.html"
+top: "48.6%"
+left: "50.6%"
+bottom: "46.9%"
+letter: "F"
 ---
