--- a/app/_posts/2015-03-01-Garagem.md
+++ b/app/_posts/2015-03-01-Garagem.md
@@ -8,4 +8,8 @@ address: "Rua Doutor Ribeiro de Almeida, 166, Barra Funda."
 coordinates: "-23º 33’ 3.78” -46º 38’ 31.36”"
 enabled: disabled
 permalink: "garagem.html"
+top: "56.5%"
+left: "38.6%"
+bottom: "38.9%"
+letter: "G"
 ---
