--- a/app/_posts/2015-03-01-Lamina.md
+++ b/app/_posts/2015-03-01-Lamina.md
@@ -8,4 +8,8 @@ address: "Avenida São João, 108, República."
 coordinates: "-23º 32’ 39.13” -46º 38’ 13.00”"
 enabled: disabled
 permalink: "lamina.html"
+top: "53.5%"
+left: "48.8%"
+bottom: "42.2%"
+letter: "L"
 ---
