--- a/app/_posts/2015-03-01-Paperbox.md
+++ b/app/_posts/2015-03-01-Paperbox.md
@@ -8,4 +8,8 @@ address: "Rua do Carmo, 56, Sé."
 coordinates: "-23º 33’ 4.72” -46º 37’ 50.52”"
 enabled: disabled
 permalink: "paperbox.html"
+top: "78.2%"
+left: "59.7%"
+bottom: "17.1%"
+letter: "P"
 ---
