--- a/app/_posts/2015-03-01-Pivo.md
+++ b/app/_posts/2015-03-01-Pivo.md
@@ -8,4 +8,8 @@ address: "Avenida Ipiranga, 200, República."
 coordinates: "-23º 32’ 45.86” -46º 38’ 40.89”"
 enabled: disabled
 permalink: "pivo.html"
+top: "60%"
+left: "35.18%"
+bottom: "35.5%"
+letter: "P"
 ---
