--- a/app/_posts/2015-03-01-Publica.md
+++ b/app/_posts/2015-03-01-Publica.md
@@ -8,4 +8,8 @@ address: "Rua Vitorino Carmilo, 453, Santa Cecília."
 coordinates: "-23º 31’ 58.74” -46º 39’ 5.15”"
 enabled: disabled
 permalink: "publica.html"
+top: "14.5%"
+left: "23.5%"
+bottom: "81%"
+letter: "P"
 ---
