--- a/app/_posts/2015-03-01-Pum.md
+++ b/app/_posts/2015-03-01-Pum.md
@@ -8,4 +8,8 @@ address: "Rua da Glória, 320, Liberdade."
 coordinates: "-23º 33’ 21.69” -46º 38’ 3.37”"
 enabled: disabled
 permalink: "pum.html"
+top: "94.9%"
+left: "53.4%"
+bottom: "0.5%"
+letter: "P"
 ---
