--- a/app/_posts/2015-03-01-Arnold.md
+++ b/app/_posts/2015-03-01-Arnold.md
@@ -8,4 +8,8 @@ address: "Avenida Prestes Maia, 241, República."
 coordinates: "-23º 32’ 32.45” -46º 38’ 6.30”"
 enabled: disabled
 permalink: "arnold.html"
+top: "45.6%"
+left: "51.8%"
+bottom: "50.2%"
+letter: "A"
 ---
