--- a/app/_posts/2015-03-01-Ouvidor.md
+++ b/app/_posts/2015-03-01-Ouvidor.md
@@ -8,4 +8,8 @@ address: "Rua do Ouvidor, 63, Sé."
 coordinates: "-23º 32’ 56.29” -46º 38’ 15.98”"
 enabled: disabled
 permalink: "ouvidor.html"
+top: "70%"
+left: "47.15%"
+bottom: "25.4%"
+letter: "O"
 ---
