--- a/app/_posts/2015-03-01-Fluxo.md
+++ b/app/_posts/2015-03-01-Fluxo.md
@@ -2,14 +2,191 @@
 layout: place
 weight:  7
 title:  "Fluxo"
-subtitle: "--"
+subtitle: "Estúdio de jornalismo"
 description: " é um estúdio de jornalismo."
 address: "Rua Capitão Salomão, 26, República."
 coordinates: "-23º 32’ 34.53” -46º 38’ 12.04”"
-enabled: disabled
+enabled: enabled
+photo: "fluxo.jpg"
+coverClass: "fluxo"
+shareImage: "CENTRO_share_fluxo.jpg"
 permalink: "fluxo.html"
 top: "48.6%"
 left: "50.6%"
 bottom: "46.9%"
 letter: "F"
 ---
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p>Mudança é o fio condutor do <a target="_blank" href="http://www.fluxo.net/">Fluxo</a>, um estúdio de jornalismo dedicado a pensar em novos modelos de financiamento, produção e distribuição de conteúdo. O projeto, tocado pelo jornalista Bruno Torturra, surgiu depois das Marchas de Junho, quando o coletivo <a target="_blank" href="https://www.facebook.com/midiaNINJA">Mídia Ninja</a> subverteu a transmissão das manifestações ao gravar e transmitir os protestos de forma simultânea pela internet. Torturra participou do processo e saiu inspirado.</p>
+      <p>“O jornalismo ainda está preso num modelo meio encastelado, que observa o mundo e emite conteúdo a partir de uma torre, que não se conecta com o pensamento cultural: com vida social, urbanismo, novas estéticas, ativismo”, diz Torturra. “Minha ideia é conectar a atividade jornalística a esse pensamento cultural. E tentar criar um novo modelo de negócio e produção, fora da lógica comercial.”</p>
+      <p>O Fluxo é parte da mudança que ocorre no centro de São Paulo, muitas vezes descrita como nociva. Ativistas apontam que quando um grupo abonado ocupa uma região em massa, preços e aluguéis tendem a subir, expulsando a população original. "Acho injusto falar que isso está acontecendo no centro", opina Torturra. "Trazer a economia criativa é aumentar a diversidade da região com coisas que não existiam aqui antes."</p>
+    </div>
+  </div>
+  <div class="location row">
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <span class="company">Fluxo</span>
+      <span class="address">Rua Capitão Salomão, 26, Campos Elíseos</span>
+      <span class="coordinates">-23º 32’ 34.53” -46º 38’ 12.04”</span>
+      <div class="compass"></div>
+    </div>
+  </div>
+</div>
+
+
+<div class="centro-container">
+
+  <!-- bloco 1 -->
+  <div class="fixie-text-container">
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p><span class="plantin">Tivemos sorte porque achamos um prédio no território que a gente queria, o Anhangabaú. Meu plano inicial era montar a sede da Mídia Ninja, mas por uma série de motivos me distanciei desse projeto e esse lugar virou a sede do Fluxo.</span> <span class="dia"><strong>Bruno Torturra</strong></span></p>
+        <p><br><span class="caption right desktop-only">Antiga vista do Anhangabaú a partir do Fluxo.</span></p>
+      </div>
+      <div class="col-md-8 pull-right show-smooth">
+          <img src="img/content/fluxo/01.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 col-md-offset-4 show-smooth">
+        <img src="img/content/fluxo/02.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-8 col-md-offset-4">
+        <img src="img/content/fluxo/03.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Antiga vista do Anhangabaú a partir do Fluxo.</span></p>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- bloco 2 -->
+  <div class="fixie-text-container">
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p><span class="plantin">O Fluxo é uma tentativa de descobrir como viabilizar a produção jornalística nesse mercado instável. Quero misturar ideias da mídia tradicional, para que nosso conteúdo seja consistente, com inovações de modelo e distribuição que aprendi na Mídia Ninja.</span></p>
+        <p><br><span class="caption right desktop-only">Detalhes da área de trabalho do jornalista Bruno Torturra.</span></p>
+      </div>
+      <div class="col-md-4 col-md-offset-4 show-smooth">
+        <img src="img/content/fluxo/04.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/fluxo/05.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-8">
+        <img src="img/content/fluxo/06.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Detalhes da área de trabalho do jornalista Bruno Torturra.</span></p>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- bloco 3 -->
+  <div class="fixie-text-container">
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p><span class="plantin">Esse é o território mais interessante, estratégico e menosprezado de São Paulo, a gema da cidade do ponto de vista do urbanismo. Principalmente o Anhangabaú, que possui o maior espaço livre de carros da cidade, mas mesmo assim é fácil de chegar.</span></p>
+        <p><br><span class="caption right desktop-only">Mapas de São Paulo e do Brasil.</span></p>
+      </div>
+      <div class="col-md-4 col-md-offset-4 show-smooth">
+        <img src="img/content/fluxo/07.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-8 col-md-offset-4 show-smooth">
+        <img src="img/content/fluxo/08.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-6 col-md-offset-4">
+        <img src="img/content/fluxo/09.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Mapas de São Paulo e do Brasil.</span></p>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- bloco 4 -->
+  <div class="fixie-text-container">
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p><span class="plantin">O movimento em direção ao centro é cultural e geracional, não apenas econômico. A nossa geração está olhando para a cidade com mais atenção. E quando você começa a fazer isso, o centro salta à vista como o lugar a ser ocupado.</span></p>
+        <p><br><span class="caption right desktop-only">Pôster de um evento cultural organizado pelo Eduqativo, vizinho de prédio do Fluxo.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/fluxo/10.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/fluxo/11.jpg" class="" alt="">
+      </div>
+    </div>
+  </div>
+
+
+  <!-- bloco 5 -->
+  <div class="fixie-text-container">
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p><span class="plantin">O efeito negativo desse movimento é a gentrificação. Esse processo acontece em outros bairros, é perigoso e precisa ser controlado. Mas acho injusto falar que esteja acontecendo no centro. Trazer a economia criativa é aumentar a diversidade da região com coisas que não existiam aqui antes.</span></p>
+        <p><br><span class="caption right desktop-only">O Fluxo fica no segundo andar do Farol, um prédio-coletivo no Anhangabaú.</span></p>
+      </div>
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/fluxo/12.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 f-right show-smooth">
+        <img src="img/content/fluxo/13.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-6 f-right col-md-offset-4">
+        <img src="img/content/fluxo/14.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">O Fluxo fica no segundo andar do Farol, um prédio-coletivo no Anhangabaú.</span></p>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
