Added custom grid to support right offset.

--- a/app/_posts/2015-03-01-Fluxo.md
+++ b/app/_posts/2015-03-01-Fluxo.md
@@ -102,7 +102,7 @@ letter: "F"
         <p><span class="plantin">Esse é o território mais interessante, estratégico e menosprezado de São Paulo, a gema da cidade do ponto de vista do urbanismo. Principalmente o Anhangabaú, que possui o maior espaço livre de carros da cidade, mas mesmo assim é fácil de chegar.</span></p>
         <p><br><span class="caption right desktop-only">Mapas de São Paulo e do Brasil.</span></p>
       </div>
-      <div class="col-md-4 col-md-offset-4 show-smooth">
+      <div class="col-md-4 f-right col-md-offset-right-4 show-smooth">
         <img src="img/content/fluxo/07.jpg" class="" alt="">
       </div>
     </div>
@@ -151,7 +151,7 @@ letter: "F"
         <p><span class="plantin">O efeito negativo desse movimento é a gentrificação. Esse processo acontece em outros bairros, é perigoso e precisa ser controlado. Mas acho injusto falar que esteja acontecendo no centro. Trazer a economia criativa é aumentar a diversidade da região com coisas que não existiam aqui antes.</span></p>
         <p><br><span class="caption right desktop-only">O Fluxo fica no segundo andar do Farol, um prédio-coletivo no Anhangabaú.</span></p>
       </div>
-      <div class="col-md-6 col-md-offset-4 show-smooth">
+      <div class="col-md-6 f-right col-md-offset-right-2 show-smooth">
         <img src="img/content/fluxo/12.jpg" class="" alt="">
       </div>
     </div>
