--- a/app/_posts/2015-03-01-Fluxo.md
+++ b/app/_posts/2015-03-01-Fluxo.md
@@ -35,12 +35,10 @@ letter: "F"
   </div>
 </div>
 
-
 <div class="centro-container">
 
   <!-- bloco 1 -->
   <div class="fixie-text-container">
-
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text">
         <p><span class="plantin">Tivemos sorte porque achamos um prédio no território que a gente queria, o Anhangabaú. Meu plano inicial era montar a sede da Mídia Ninja, mas por uma série de motivos me distanciei desse projeto e esse lugar virou a sede do Fluxo.</span> <span class="dia"><strong>Bruno Torturra</strong></span></p>
@@ -65,14 +63,12 @@ letter: "F"
     </div>
   </div>
 
-
   <!-- bloco 2 -->
   <div class="fixie-text-container">
-
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text f-right">
         <p><span class="plantin">O Fluxo é uma tentativa de descobrir como viabilizar a produção jornalística nesse mercado instável. Quero misturar ideias da mídia tradicional, para que nosso conteúdo seja consistente, com inovações de modelo e distribuição que aprendi na Mídia Ninja.</span></p>
-        <p><br><span class="caption right desktop-only">Detalhes da área de trabalho do jornalista Bruno Torturra.</span></p>
+        <p><br><span class="caption left desktop-only">Detalhes da área de trabalho do jornalista Bruno Torturra.</span></p>
       </div>
       <div class="col-md-4 col-md-offset-4 show-smooth">
         <img src="img/content/fluxo/04.jpg" class="" alt="">
@@ -93,10 +89,8 @@ letter: "F"
     </div>
   </div>
 
-
   <!-- bloco 3 -->
   <div class="fixie-text-container">
-
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text">
         <p><span class="plantin">Esse é o território mais interessante, estratégico e menosprezado de São Paulo, a gema da cidade do ponto de vista do urbanismo. Principalmente o Anhangabaú, que possui o maior espaço livre de carros da cidade, mas mesmo assim é fácil de chegar.</span></p>
@@ -121,14 +115,12 @@ letter: "F"
     </div>
   </div>
 
-
   <!-- bloco 4 -->
   <div class="fixie-text-container">
-
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text f-right">
         <p><span class="plantin">O movimento em direção ao centro é cultural e geracional, não apenas econômico. A nossa geração está olhando para a cidade com mais atenção. E quando você começa a fazer isso, o centro salta à vista como o lugar a ser ocupado.</span></p>
-        <p><br><span class="caption right desktop-only">Pôster de um evento cultural organizado pelo Eduqativo, vizinho de prédio do Fluxo.</span></p>
+        <p><br><span class="caption left desktop-only">Pôster de um evento cultural organizado pelo Eduqativo, vizinho de prédio do Fluxo.</span></p>
       </div>
       <div class="col-md-8 show-smooth">
         <img src="img/content/fluxo/10.jpg" class="" alt="">
@@ -138,14 +130,13 @@ letter: "F"
     <div class="row margin-bottom">
       <div class="col-md-6 col-md-offset-2 show-smooth">
         <img src="img/content/fluxo/11.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Pôster de um evento cultural organizado pelo Eduqativo, vizinho de prédio do Fluxo.</span></p>
       </div>
     </div>
   </div>
 
-
   <!-- bloco 5 -->
   <div class="fixie-text-container">
-
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text">
         <p><span class="plantin">O efeito negativo desse movimento é a gentrificação. Esse processo acontece em outros bairros, é perigoso e precisa ser controlado. Mas acho injusto falar que esteja acontecendo no centro. Trazer a economia criativa é aumentar a diversidade da região com coisas que não existiam aqui antes.</span></p>
@@ -170,23 +161,4 @@ letter: "F"
     </div>
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
-
-
