Added content for PUM page.

--- a/app/_posts/2015-03-01-Pum.md
+++ b/app/_posts/2015-03-01-Pum.md
@@ -2,14 +2,179 @@
 layout: place
 weight:  18
 title:  "Pum"
-subtitle: "--"
+subtitle: "Estúdio de design"
 description: " é um estúdio em casa."
-address: "Rua da Glória, 320, Liberdade."
+address: "Rua Galvão Bueno, 332, Liberdade."
 coordinates: "-23º 33’ 21.69” -46º 38’ 3.37”"
-enabled: disabled
+enabled: enabled
 permalink: "pum.html"
 top: "94.9%"
 left: "53.4%"
 bottom: "0.5%"
 letter: "P"
 ---
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p>Os designers Javier Cifre e Felipe Magario se conheceram no <a target="_blank" href="http://estudioarvore.com.br/">estúdio Árvore</a> e sonharam muito antes de realmente começar uma iniciativa própria, o <a target="_blank" href="http://www.estudiopum.com/">estúdio Pum</a>, fundado em 2012. Como sede, escolheram o apartamento de Cifre, nascido em Buenos Aires, mas baseado no centro da comunidade japonesa de São Paulo, a Liberdade.</p>
+      <p>Desde o início, os designers tentam equilibrar o estilo de trabalhos. “Colaboramos com clientes grandes, mas também temos projetos menores, onde fazemos coisas mais criativas”, explica Magario. Suas criações são divertidas, como adianta o nome do estúdio, sempre carregadas de referências – a jogos de <a target="_blank" href="http://www.estudiopum.com/posters-coulage">Game Boy</a>, às câmeras <a target="_blank" href="http://www.estudiopum.com/HSBC-Extrato-da-Vida">Polaroid</a> e aos desenhos <a target="_blank" href="http://www.estudiopum.com/ABC">Dragon Ball</a> e <a target="_blank" href="http://www.estudiopum.com/PUM-Zine">Adventure Time</a>.</p>
+      <p>Muito da inspiração dos designers surge da própria <a target="_blank" href="http://www.estudiopum.com/Tokyo">Liberdade</a>, casa da maior comunidade de japoneses fora do Japão e cheia de lojas de mangás, feiras e mercados orientais e izakayas, os bares típicos japoneses. “Acho que a identidade do negócio é diferente por estarmos localizados nessa região”, diz Cifre.</p>
+      <p>Localizada na periferia da região central de São Paulo, Cifre e Magario destacam como a Liberdade parece uma exceção entre os outros bairros centrais. Possui uma característica comercial e turística, com movimento diurno, mas também residencial e universitária, que mantêm a região ativa durante a noite. “O movimento diminui, mas as ruas não ficam desertas como no Anhangabaú”, diz Magario.</p>
+    </div>
+  </div>
+  <div class="location row">
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <span class="company">Estúdio Pum</span>
+      <span class="address">Rua da Glória, 320, Liberdade</span>
+      <span class="coordinates">-23º 33’ 21.69” -46º 38’ 3.37”</span>
+      <div class="compass"></div>
+    </div>
+  </div>
+</div>
+
+<div class="centro-container">
+
+  <!-- bloco 1 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p><span class="plantin">Quando descobri a Liberdade, soube na hora que queria morar aqui, muito porque gosto da cultura japonesa, mas também porque é divertido explorar a região, descobrir mercados e restaurantes de gente que muitas vezes nem fala português.</span> <span class="dia"><strong>Javier Cifre</strong></span></p>
+        <p><br><span class="caption right desktop-only">Apartamento que sedia o estúdio Pum, localizado na Liberdade.</span></p>
+      </div>
+      <div class="col-md-8 pull-right show-smooth">
+          <img src="img/content/pum/01.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 col-md-offset-6 show-smooth">
+        <img src="img/content/pum/02.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-4 col-md-offset-4">
+        <img src="img/content/pum/03.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Apartamento que sedia o estúdio Pum, localizado na Liberdade.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 2 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p><span class="plantin">Onde eu morava, em Buenos Aires, existia uma relação entre as pessoas do bairro. Eu achava que isso não aconteceria aqui por ser uma região central. Mas estava errado: os moradores e as pessoas que trabalham na região se conhecem e se cumprimentam.</span> <span class="dia"><strong>Javier Cifre</strong></span></p>
+        <p><br><span class="caption left desktop-only">Entrada do prédio de Javier Cifre, um dos fundadores do estúdio.</span></p>
+      </div>
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+          <img src="img/content/pum/04.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 col-md-offset-4 show-smooth">
+        <img src="img/content/pum/05.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-6 show-smooth">
+        <img src="img/content/pum/06.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Entrada do prédio de Javier Cifre, um dos fundadores do estúdio.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 3 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p><span class="plantin">Eu acho muito diferente ter um estúdio aqui do que ter um estúdio na Berrini, na Faria Lima ou na Vila Olímpia. Não gostamos muito de sair daqui para fazer reuniões nessas regiões, mas é impressionante como as pessoas gostam de sair desses lugares para fazer reunião aqui.</span> <span class="dia"><strong>Felipe Magario</strong></span></p>
+        <p><br><span class="caption right desktop-only">Área de trabalho e algumas das criações da dupla.</span></p>
+      </div>
+      <div class="col-md-8 pull-right show-smooth">
+          <img src="img/content/pum/07.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-6 col-md-offset-6">
+        <img src="img/content/pum/08.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/pum/09.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-4 col-md-offset-4">
+        <img src="img/content/pum/10.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Área de trabalho e algumas das criações da dupla.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 4 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p><span class="plantin">O centro sempre foi um choque para mim e precisei me forçar a andar pela região. Mas assim que comecei, comecei a entender o lugar e voltar. Acho que a gente tem um trauma da violência do centro. O Javier, por exemplo, vindo de fora, não criou esse preconceito.</span> <span class="dia"><strong>Felipe Magario</strong></span></p>
+        <p><br><span class="caption left desktop-only">Sala vizinha ao estúdio, decorada com trabalhos do Pum e de amigos.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+          <img src="img/content/pum/11.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 col-md-offset-4 show-smooth">
+        <img src="img/content/pum/12.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-6 show-smooth">
+        <img src="img/content/pum/13.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-6">
+        <img src="img/content/pum/14.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Sala vizinha ao estúdio, decorada com trabalhos do Pum e de amigos.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 5 -->
+  <!-- <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p><span class="plantin">Gostamos de encontrar lugares desconhecidos. Às vezes você é o único brasileiro num mercado ou restaurante. Acredito que não apenas a Liberdade, mas o centro inteiro tem um pouco desse espírito, de convidar as pessoas a explorar.</span> <span class="dia"><strong>Felipe Magario</strong></span></p>
+        <p><br><span class="caption right desktop-only">legenda aqui...</span></p>
+      </div>
+      <div class="col-md-8 pull-right show-smooth">
+          <img src="img/content/pum/04.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom">
+      <div class="col-md-4 col-md-offset-6 show-smooth">
+        <img src="img/content/pum/05.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-4 col-md-offset-4">
+        <img src="img/content/pum/06.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">legenda aqui...</span></p>
+      </div>
+    </div>
+  </div> -->
+
+</div>
