Updated sass to support cover image.

--- a/app/_posts/2015-03-01-Pum.md
+++ b/app/_posts/2015-03-01-Pum.md
@@ -7,6 +7,9 @@ description: " é um estúdio em casa."
 address: "Rua Galvão Bueno, 332, Liberdade."
 coordinates: "-23º 33’ 21.69” -46º 38’ 3.37”"
 enabled: enabled
+photo: "pum.jpg"
+coverClass: "pum"
+shareImage: "CENTRO_share_pum.jpg"
 permalink: "pum.html"
 top: "94.9%"
 left: "53.4%"
