Added hover image in homepage.

--- a/app/_posts/2015-03-01-Pum.md
+++ b/app/_posts/2015-03-01-Pum.md
@@ -21,7 +21,7 @@ letter: "P"
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <p>Os designers Javier Cifre e Felipe Magario se conheceram no <a target="_blank" href="http://estudioarvore.com.br/">estúdio Árvore</a> e sonharam muito antes de realmente começar uma iniciativa própria, o <a target="_blank" href="http://www.estudiopum.com/">estúdio Pum</a>, fundado em 2012. Como sede, escolheram o apartamento de Cifre, nascido em Buenos Aires, mas baseado no centro da comunidade japonesa de São Paulo, a Liberdade.</p>
-      <p>Desde o início, os designers tentam equilibrar o estilo de trabalhos. “Colaboramos com clientes grandes, mas também temos projetos menores, onde fazemos coisas mais criativas”, explica Magario. Suas criações são divertidas, como adianta o nome do estúdio, sempre carregadas de referências – a jogos de <a target="_blank" href="http://www.estudiopum.com/posters-coulage">Game Boy</a>, às câmeras <a target="_blank" href="http://www.estudiopum.com/HSBC-Extrato-da-Vida">Polaroid</a> e aos desenhos <a target="_blank" href="http://www.estudiopum.com/ABC">Dragon Ball</a> e <a target="_blank" href="http://www.estudiopum.com/PUM-Zine">Adventure Time</a>.</p>
+      <p>Desde o início, os designers tentam equilibrar o estilo de trabalhos. “Colaboramos com clientes grandes, mas também temos projetos menores, onde fazemos coisas mais criativas”, explica Magario. Suas criações são divertidas, como adianta o nome do estúdio, sempre carregadas de referências – a jogos de <a target="_blank" href="http://www.estudiopum.com/Paper-Craft">Game Boy</a>, às câmeras <a target="_blank" href="http://www.estudiopum.com/HSBC-Extrato-da-Vida">Polaroid</a> e aos desenhos <a target="_blank" href="http://www.estudiopum.com/PUM-Zine-3-ABC">Dragon Ball</a> e <a target="_blank" href="http://www.estudiopum.com/PUM-Zine">Adventure Time</a>.</p>
       <p>Muito da inspiração dos designers surge da própria <a target="_blank" href="http://www.estudiopum.com/Tokyo">Liberdade</a>, casa da maior comunidade de japoneses fora do Japão e cheia de lojas de mangás, feiras e mercados orientais e izakayas, os bares típicos japoneses. “Acho que a identidade do negócio é diferente por estarmos localizados nessa região”, diz Cifre.</p>
       <p>Localizada na periferia da região central de São Paulo, Cifre e Magario destacam como a Liberdade parece uma exceção entre os outros bairros centrais. Possui uma característica comercial e turística, com movimento diurno, mas também residencial e universitária, que mantêm a região ativa durante a noite. “O movimento diminui, mas as ruas não ficam desertas como no Anhangabaú”, diz Magario.</p>
     </div>
@@ -51,13 +51,13 @@ letter: "P"
     </div>
 
     <div class="row margin-bottom">
-      <div class="col-md-4 col-md-offset-6 show-smooth">
+      <div class="col-md-6 col-md-offset-6 show-smooth">
         <img src="img/content/pum/02.jpg" class="" alt="">
       </div>
     </div>
 
     <div class="row margin-bottom double show-smooth">
-      <div class="col-md-4 col-md-offset-4">
+      <div class="col-md-6 col-md-offset-4">
         <img src="img/content/pum/03.jpg" class="" alt="">
         <p><span class="caption top mobile-only">Apartamento que sedia o estúdio Pum, localizado na Liberdade.</span></p>
       </div>
