Added metadata to Amarello page.

--- a/app/_posts/2015-03-01-Amarello.md
+++ b/app/_posts/2015-03-01-Amarello.md
@@ -2,11 +2,14 @@
 layout: place
 weight:  1
 title:  "Amarello"
-subtitle: "--"
+subtitle: "Publicação independente"
 description: " é uma editora."
 address: "Rua Libero Badaró, 336, Sé."
 coordinates: "-23º 32’ 47.84” -46º 38’ 10.87”"
-enabled: disabled
+enabled: enabled
+photo: "amarello.jpg"
+coverClass: "amarello"
+shareImage: "CENTRO_share_amarello.jpg"
 permalink: "amarello.html"
 top: "61.5%"
 left: "49.7%"
