--- a/app/_posts/2015-03-01-Amarello.md
+++ b/app/_posts/2015-03-01-Amarello.md
@@ -16,3 +16,129 @@ left: "49.7%"
 bottom: "33.7%"
 letter: "A"
 ---
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p>A revista <a href="http://www.amarello.com.br/" target="_blank">Amarello</a> surgiu como uma resposta à uniformidade do mercado editorial. A publicação, criada e editada pelo publicitário Tomás Biagi Carvalho, busca identidade e voz própria numa área sufocada por títulos repetitivos, pela crise do impresso e por incertezas tecnológicas.</p>
+      <p>“Em 2009, eu tinha acabado de voltar de Londres e pensei em inventar a minha própria revista, muito porque não queria trabalhar em uma grande editora”, explica Tomás. “Eu queria criar a publicação que eu gostaria de ler.” A Amarello começou como um fanzine com tiragem reduzida, mas logo pulou para quase 10 mil exemplares, distribuídos no Brasil, nos Estados Unidos e na Europa.</p>
+      <p>A redação fica num prédio projetado por Ramos de Azevedo, que no começo do século passado tocava o principal escritório de arquitetura de São Paulo. A localização central, próximo do Vale do Anhangabaú, reflete a diversidade cultural tratada nas páginas da revista. Segundo Tomás, a região não precisa ser “revitalizada”, mas “reencontrar seu significado.”</p>
+    </div>
+  </div>
+  <div class="location row">
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <span class="company">Amarello</span>
+      <span class="address">Rua Libero Badaró, 336, Sé</span>
+      <span class="coordinates">-23º 32’ 47.84” -46º 38’ 10.87”</span>
+      <div class="compass"></div>
+    </div>
+  </div>
+</div>
+
+<div class="centro-container">
+  <!-- bloco 1 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 fixie-text show-smooth f-right">
+        <p><span class="plantin">Encontrei esse prédio quando estava produzindo a quarta edição da Amarello. Nós fizemos um documentário sobre o edifício Martinelli e depois de uma reunião no prédio, passei pela Libero Badaró e descobri esse lugar. Quando entrei, tive um clique: percebi que era hora de sair de casa e montar a redação.</span> <span class="dia"><strong>Tomás Biagi Carvalho</strong></span></p>
+        <p><br><span class="caption left desktop-only">Fachada e vista do Vale do Anhangabaú.</span></p>
+      </div>
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+          <img src="img/content/amarello/01.jpg" class="" alt="">
+      </div>
+    </div>
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-8">
+        <img src="img/content/amarello/02.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Fachada e vista do Vale do Anhangabaú.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 2 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 fixie-text show-smooth">
+        <p><span class="plantin">A fachada é tombada. O prédio foi desenhado pelo Ramos de Azevedo e construído na década de 1920. Somos vizinhos do primeiro arranha-céu de São Paulo, o Sampaio Moreira, que hoje parece pequeno, mas antigamente era cercado apenas por casas.</span></p>
+        <p><span class="caption right desktop-only">Sacada e entrada do prédio, projetado por Ramos de Azevedo.</span></p>
+      </div>
+      <div class="col-md-8 pull-right show-smooth">
+        <img src="img/content/amarello/03.jpg" class="" alt="">
+      </div>
+    </div>
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-6 col-md-offset-4">
+        <img src="img/content/amarello/04.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Sacada e entrada do prédio, projetado por Ramos de Azevedo.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 3 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 fixie-text show-smooth f-right">
+        <p><span class="plantin">Quase todos os móveis vieram da casa de uma tia, então até hoje parece que eu estou na casa dela. O aparador é do Geraldo de Barros, que desenhou essa linha de móveis para a Unilabor. O painel é um trabalho da Bruna Albuquerque, que produz as obras no lugar onde elas ficam expostas.</span></p>
+        <p><span class="caption left desktop-only">Redação da revista Amarello.</span></p>
+      </div>
+      <div class="col-md-6 col-md-offset-2 margin-bottom show-smooth">
+        <img src="img/content/amarello/05.jpg" class="" alt="">
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/amarello/06.jpg" class="" alt="">
+      </div>
+    </div>
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-6 col-md-offset-2">
+        <img src="img/content/amarello/07.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Redação da revista Amarello.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 4 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 fixie-text show-smooth">
+        <p><span class="plantin">Não pensei muito em formatos quando fundei a Amarello, apenas que teria um tema por edição. Como a revista é minha, não existe muita formalidade e algumas coisas mudam de uma edição para outra. Faço muitos testes: incluo ideias e elementos e quando eles não funcionam, tiro na edição seguinte.</span></p>
+        <p><span class="caption right desktop-only">Edições antigas das revistas Amarello e Colors.</span></p>
+      </div>
+      <div class="col-md-8 pull-right show-smooth">
+        <img src="img/content/amarello/08.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom show-smooth">
+      <div class="col-md-6 col-md-offset-4">
+        <img src="img/content/amarello/09.jpg" class="" alt="">
+      </div>
+    </div>
+
+    <div class="row margin-bottom show-smooth">
+      <div class="col-md-8 col-md-offset-4">
+        <img src="img/content/amarello/10.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Edições antigas das revistas Amarello e Colors.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 5 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 fixie-text show-smooth f-right">
+        <p><span class="plantin">Tenho certeza que são publicações mais trabalhadas, com tiragens limitadas e custo de produção menor que vão perdurar nesse impasse do digital. A popularidade de feiras de publicações independentes mostram como as pessoas estão informadas sobre o mercado editorial.</span></p>
+        <p><span class="caption left desktop-only">Detalhes da redação.</span></p>
+      </div>
+      <div class="col-md-8 margin-bottom show-smooth">
+        <img src="img/content/amarello/11.jpg" class="" alt="">
+      </div>
+    </div>
+    <div class="row margin-bottom double show-smooth">
+      <div class="col-md-4 col-md-offset-4">
+        <img src="img/content/amarello/12.jpg" class="" alt="">
+        <p><span class="caption top mobile-only">Detalhes da redação.</span></p>
+      </div>
+    </div>
+  </div>
+
+</div>
