Updated text for Pum.

--- a/app/_posts/2015-03-01-Pum.md
+++ b/app/_posts/2015-03-01-Pum.md
@@ -2,7 +2,7 @@
 layout: place
 weight:  18
 title:  "Pum"
-subtitle: "Estúdio de design"
+subtitle: "Estúdio em casa"
 description: " é um estúdio em casa."
 address: "Rua Galvão Bueno, 332, Liberdade."
 coordinates: "-23º 33’ 21.69” -46º 38’ 3.37”"
@@ -29,7 +29,7 @@ letter: "P"
   <div class="location row">
     <div class="col-md-4 col-md-offset-4 text-center">
       <span class="company">Estúdio Pum</span>
-      <span class="address">Rua da Glória, 320, Liberdade</span>
+      <span class="address">Rua Galvão Bueno, 332, Liberdade</span>
       <span class="coordinates">-23º 33’ 21.69” -46º 38’ 3.37”</span>
       <div class="compass"></div>
     </div>
