Updated text for Amarello's page.

--- a/app/_posts/2015-03-01-Amarello.md
+++ b/app/_posts/2015-03-01-Amarello.md
@@ -22,7 +22,7 @@ letter: "A"
     <div class="col-md-10 col-md-offset-1">
       <p>A revista <a href="http://www.amarello.com.br/" target="_blank">Amarello</a> surgiu como uma resposta à uniformidade do mercado editorial. A publicação, criada e editada pelo publicitário Tomás Biagi Carvalho, busca identidade e voz própria numa área sufocada por títulos repetitivos, pela crise do impresso e por incertezas tecnológicas.</p>
       <p>“Em 2009, eu tinha acabado de voltar de Londres e pensei em inventar a minha própria revista, muito porque não queria trabalhar em uma grande editora”, explica Tomás. “Eu queria criar a publicação que eu gostaria de ler.” A Amarello começou como um fanzine com tiragem reduzida, mas logo pulou para quase 10 mil exemplares, distribuídos no Brasil, nos Estados Unidos e na Europa.</p>
-      <p>A redação fica num prédio projetado por Ramos de Azevedo, que no começo do século passado tocava o principal escritório de arquitetura de São Paulo. A localização central, próximo do Vale do Anhangabaú, reflete a diversidade cultural tratada nas páginas da revista. Segundo Tomás, a região não precisa ser “revitalizada”, mas “reencontrar seu significado.”</p>
+      <p>A redação fica num prédio projetado por Ramos de Azevedo, que no começo do século passado comandava o principal escritório de arquitetura de São Paulo. A localização central, próximo do Vale do Anhangabaú, reflete a diversidade cultural tratada nas páginas da revista. Segundo Tomás, a região não precisa ser “revitalizada”, mas “reencontrar seu significado”.</p>
     </div>
   </div>
   <div class="location row">
