--- a/app/_posts/2015-03-01-Balsa.md
+++ b/app/_posts/2015-03-01-Balsa.md
@@ -2,14 +2,185 @@
 layout: place
 weight:  3
 title:  "Balsa"
-subtitle: "--"
+subtitle: "Não é um bar"
 description: " não é um bar."
 address: "Rua Capitão Salomão, 26, República."
 coordinates: "-23º 32’ 34.53” -46º 38’ 12.04”"
-enabled: disabled
+enabled: enabled
+photo: "balsa.jpg"
+coverClass: "balsa"
+shareImage: "Balsa_share.jpg"
 permalink: "balsa.html"
 top: "48.6%"
 left: "46.9%"
 bottom: "46.9%"
 letter: "B"
 ---
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p>Renata Mein e Elohim Barros não sabiam direito para quê, mas queriam achar um terraço no centro de São Paulo. Por recomendação, visitaram um prédio na região do Vale do Anhangabaú. Mas era muito alto: eles sabiam que potenciais visitantes não encarariam as escadas e que as filas no elevador seriam enormes. Mas, lá de cima, avistaram o pedaço de teto que alguns meses depois viraria a <a href="http://www.facebook.com/balsa26" target="_blank">Balsa</a>.</p>
+      <p>O bar-que-não-é-bar foi fundado no quarto andar e no terraço de um prédio vizinho ao Anhangabaú. A empresa que ocupava o resto do edifício logo desocupou os outros andares, que passaram a abrigar o <a href="http://www.fluxo.net/" target="_blank">Fluxo</a>, de Bruno Torturra, o <a href="http://www.institutochoquecultural.org.br/eduqativomain/" target="_blank">Instituto Choque Cultural</a>, de Baixo Ribeiro, e o <a href="http://projetodraft.com/liquen/" target="_blank">Líquen</a>, estúdio de design fundado por Renata, Elohim e outros quatro amigos. Nascia o Farol.</p>
+      <p>Agora, o casal procura um modelo de negócios sustentável para o Líquen, que permita a execução de projetos criativos. Também querem repensar o jeito que a vida noturna da cidade é organizada e incentivam a criação de um distrito cultural, de preferência nos arredores do Anhangabaú. Finalmente, planejam melhorar o entorno do prédio: plantar mais árvores na Capitão Salomão e, como bom Farol, iluminar a ponte da Santa Ifigênia.</p>
+    </div>
+  </div>
+  <div class="location row">
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <span class="company">Balsa</span>
+      <span class="address">Rua Capitão Salomão, 26, Campos Elíseos</span>
+      <span class="coordinates">-23º 32’ 34.53” -46º 38’ 12.04”</span>
+      <div class="compass"></div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="centro-container">
+
+  <!-- bloco 1 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            Não sabia direito o que fazer, se seria bar ou café, como daria dinheiro, se abriria todo dia. Alguns meses depois de alugar, ainda estava tudo bagunçado, mas decidimos convidar alguns amigos. Essa primeira festa cresceu, virou uma zona e deu meio que o rumo do que viria depois.
+          </span>
+          <span class="dia">
+            <strong>Renata Mein</strong>
+          </span>
+        </p>
+        <p><br><span class="caption right desktop-only">Entrada e salão da Balsa.</span></p>
+      </div>
+      <div class="col-md-8 pull-right">
+      	<div class="col-md-8 show-smooth" style="padding:0">
+          <img src="img/content/balsa/balsa_01.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 pull-right show-smooth">
+        <img src="img/content/balsa/balsa_02.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-8 pull-right show-smooth">
+        <img src="img/content/balsa/balsa_03.jpg">
+        <p><span class="caption top mobile-only">Entrada e salão da Balsa.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 2 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p>
+          <span class="plantin">
+            Nós sempre demos festas em casa e sabemos que tem coisas que só esse tipo de festa permite: trazer os filhos, sentir que precisa cuidar do lugar. Além disso, um lugar como esse, com a beleza da paisagem, quebra muitos preconceitos sobre a região.
+          </span>
+          <span class="dia">
+            <strong>Renata Mein</strong>
+          </span>
+        </p>
+        <p><span class="caption left desktop-only">Terraço e vista do centro de São Paulo.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/balsa/balsa_04.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/balsa/balsa_05.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/balsa/balsa_06.jpg">
+        <p><span class="caption top mobile-only">Terraço e vista do centro de São Paulo.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 3 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            Eu sei que se eu me juntar com pessoas que eu gosto, algo legal vai surgir. O Líquen nasceu meio que desse jeito, para que a gente pudesse conviver com amigos e, partindo dessa experiência, começasse a trabalhar em projetos.
+          </span>
+          <span class="dia">
+            <strong>Renata Mein</strong>
+          </span>
+        </p>
+        <p><br><span class="caption right desktop-only">Espaço de trabalho do estúdio Líquen.</span></p>
+      </div>
+      <div class="col-md-8 pull-right">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/balsa/balsa_liquen_07.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 pull-right show-smooth">
+        <img src="img/content/balsa/balsa_liquen_08.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-4 col-md-offset-6 show-smooth">
+        <img src="img/content/balsa/balsa_liquen_09.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/balsa/balsa_liquen_10.jpg">
+        <p><span class="caption top mobile-only">Espaço de trabalho do estúdio Líquen.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 4 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p>
+          <span class="plantin">
+            Sempre foi claro para mim que o centro é o melhor lugar da cidade. Quando a gente começou a reformar o prédio e passou a andar por aqui de forma mais constante, parecia que a gente tinha mudado de cidade. Naquela época, não imaginava que o centro ficaria tão popular.
+          </span>
+          <span class="dia">
+            <strong>Renata Mein</strong>
+          </span>
+        </p>
+        <p><span class="caption left desktop-only">Prédio do Farol, no Vale do Anhangabaú.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/balsa/balsa_11.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/balsa/balsa_12.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 show-smooth">
+        <img src="img/content/balsa/balsa_13.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/balsa/balsa_14.jpg">
+        <p><span class="caption top mobile-only">Prédio do Farol, no Vale do Anhangabaú.</span></p>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+</div>
