Updated address for Balsa.

--- a/app/_posts/2015-03-01-Balsa.md
+++ b/app/_posts/2015-03-01-Balsa.md
@@ -27,7 +27,7 @@ letter: "B"
   <div class="location row">
     <div class="col-md-4 col-md-offset-4 text-center">
       <span class="company">Balsa</span>
-      <span class="address">Rua Capitão Salomão, 26, Campos Elíseos</span>
+      <span class="address">Rua Capitão Salomão, 26, República</span>
       <span class="coordinates">-23º 32’ 34.53” -46º 38’ 12.04”</span>
       <div class="compass"></div>
     </div>
