--- a/app/_posts/2015-03-01-Lamina.md
+++ b/app/_posts/2015-03-01-Lamina.md
@@ -2,14 +2,166 @@
 layout: place
 weight:  9
 title:  "Lâmina"
-subtitle: "--"
+subtitle: "Estúdio-apartamento-galeria"
 description: " é um estúdio-apartamento-galeria."
 address: "Avenida São João, 108, República."
 coordinates: "-23º 32’ 39.13” -46º 38’ 13.00”"
-enabled: disabled
+enabled: enabled
+photo: "lamina.jpg"
+coverClass: "lamina"
+shareImage: "CENTRO_SHARE_lamina.jpg"
 permalink: "lamina.html"
 top: "53.5%"
 left: "48.8%"
 bottom: "42.2%"
 letter: "L"
 ---
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p>Mistura de estúdio, apartamento e galeria, o Lâmina promove encontros entre artistas, músicos, poetas e cineastas. A ideia do projeto surgiu em outra região, numa república criativa em Perdizes. Mas devido à problemas com vizinhos, os artista acabaram no centro, num casarão dos anos 1930 localizado na icônica avenida São João.</p>
+      <p>Rodrigo de Boer, da banda Vaudeville, foi o primeiro a ocupar o lugar, seguido por Luciano CortaRuas, que chegou decidido a recriar algo nos moldes da república de Perdizes. Hoje, cerca de dez pessoas moram no prédio, incluindo membros da banda Mustache e os Apaches.</p>
+      <p>Desde 2011, quando foi fundado, o Lâmina abrigou onze exposições, além de residências artísticas em que participantes são desafiados a criar projetos inspirados pelo centro de São Paulo. “Agora, nossa luta é contra o aumento de aluguel, fenômeno que está acontecendo ferozmente”, diz Luciano.</p>
+    </div>
+  </div>
+  <div class="location row">
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <span class="company">Lâmina</span>
+      <span class="address">Avenida São João, 108, República.</span>
+      <span class="coordinates">-23º 32’ 39.13” -46º 38’ 13.00”</span>
+      <div class="compass"></div>
+    </div>
+  </div>
+</div>
+
+<div class="centro-container">
+
+  <!-- bloco 1 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            Houve um conflito no começo. Como trouxemos muitos artistas e muito público, os proprietários ficaram com medo e tiraram a nossa chave. Não podíamos mais usar o imóvel durante a noite, só de dia.
+          </span>
+          <span class="dia">
+            <strong>Luciano CortaRuas</strong>
+          </span>
+        </p>
+        <p><br><span class="caption right desktop-only">Detalhes do espaço interno do Lâmina.</span></p>
+      </div>
+      <div class="col-md-8 pull-right">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/lamina/lamina_01.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/lamina/lamina_02.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 pull-right show-smooth">
+        <img src="img/content/lamina/lamina_03.jpg">
+        <p><span class="caption top mobile-only">Detalhes do espaço interno do Lâmina.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 2 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p>
+          <span class="plantin">
+            Não tinha nada aqui: só sujeira e cocô de pomba. Conseguimos reconstruir e agora mantemos de forma independente. Também começamos a fazer locação para ensaios de moda e publicidade. Tudo para poder pagar o aluguel.
+          </span>
+          <span class="dia">
+            <strong>Luciano CortaRuas</strong>
+          </span>
+        </p>
+        <p><span class="caption left desktop-only">Interior e arredores do prédio, na República.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/lamina/lamina_04.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/lamina/lamina_05.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 show-smooth">
+        <img src="img/content/lamina/lamina_06.jpg">
+        <p><span class="caption top mobile-only">Interior e arredores do prédio, na República.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 3 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            No final das contas, esse espaço é muito resultado das exposições e dos artistas que passaram por aqui. Eu não queria algo que fosse apenas uma galeria, essencialmente comercial, mas queria ter um espaço de encontro e criação.
+          </span>
+          <span class="dia">
+            <strong>Luciano CortaRuas</strong>
+          </span>
+        </p>
+        <p><br><span class="caption right desktop-only">Vista do centro e materiais usados em projetos.</span></p>
+      </div>
+      <div class="col-md-6 col-md-offset-4">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/lamina/lamina_07.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 pull-right show-smooth">
+        <img src="img/content/lamina/lamina_08.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/lamina/lamina_09.jpg">
+        <p><span class="caption top mobile-only">Vista do centro e materiais usados em projetos.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 4 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p>
+          <span class="plantin">
+            Já são alguns anos no Centro. Nesse tempo, fizemos conexões com outros coletivos, organizamos vários eventos, inclusive o Anhangabaú da Felicidade, que reuniu 30 mil pessoas com programação de arte, música, dança e performance.
+          </span>
+          <span class="dia">
+            <strong>Luciano CortaRuas</strong>
+          </span>
+        </p>
+        <p><span class="caption left desktop-only">Arredores e interior do espaço cultural.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/lamina/lamina_10.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/lamina/lamina_11.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/lamina/lamina_12.jpg">
+        <p><span class="caption top mobile-only">Arredores e interior do espaço cultural.</span></p>
+      </div>
+    </div>
+  </div>
+</div>
