--- a/app/_posts/2015-03-01-Lamina.md
+++ b/app/_posts/2015-03-01-Lamina.md
@@ -20,15 +20,15 @@ letter: "L"
 <div class="container">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <p>Mistura de estúdio, apartamento e galeria, o Lâmina promove encontros entre artistas, músicos, poetas e cineastas. A ideia do projeto surgiu em outra região, numa república criativa em Perdizes. Mas devido à problemas com vizinhos, os artista acabaram no centro, num casarão dos anos 1930 localizado na icônica avenida São João.</p>
-      <p>Rodrigo de Boer, da banda Vaudeville, foi o primeiro a ocupar o lugar, seguido por Luciano CortaRuas, que chegou decidido a recriar algo nos moldes da república de Perdizes. Hoje, cerca de dez pessoas moram no prédio, incluindo membros da banda Mustache e os Apaches.</p>
+      <p>Mistura de estúdio, apartamento e galeria, o <a href="https://pt-br.facebook.com/estudio.lamina.7" target="_blank">Lâmina</a> promove encontros entre artistas, músicos, poetas e cineastas. A ideia do projeto surgiu em outra região, numa república criativa em Perdizes. Mas devido a problemas com vizinhos, os artista acabaram no centro, num casarão dos anos 1930 localizado na icônica avenida São João.</p>
+      <p>Rodrigo de Boer, da banda <a href="https://www.facebook.com/Vaudeville-186600941393552/" target="_blank">Vaudeville</a>, foi o primeiro a ocupar o lugar, seguido por Luciano CortaRuas, que chegou decidido a recriar algo nos moldes da república de Perdizes. Hoje, cerca de dez pessoas moram no prédio, incluindo membros da banda <a href="https://www.facebook.com/mustacheeosapachesoficial" target="_blank">Mustache e os Apaches</a>.</p>
       <p>Desde 2011, quando foi fundado, o Lâmina abrigou onze exposições, além de residências artísticas em que participantes são desafiados a criar projetos inspirados pelo centro de São Paulo. “Agora, nossa luta é contra o aumento de aluguel, fenômeno que está acontecendo ferozmente”, diz Luciano.</p>
     </div>
   </div>
   <div class="location row">
     <div class="col-md-4 col-md-offset-4 text-center">
       <span class="company">Lâmina</span>
-      <span class="address">Avenida São João, 108, República.</span>
+      <span class="address">Avenida São João, 108, República</span>
       <span class="coordinates">-23º 32’ 39.13” -46º 38’ 13.00”</span>
       <div class="compass"></div>
     </div>
