Fix legend in old pages.

--- a/app/_posts/2015-03-01-Amarello.md
+++ b/app/_posts/2015-03-01-Amarello.md
@@ -59,7 +59,7 @@ letter: "A"
   <div class="fixie-text-container">
     <div class="row margin-bottom">
       <div class="col-md-4 fixie-text show-smooth">
-        <p><span class="plantin">A fachada é tombada. O prédio foi desenhado pelo Ramos de Azevedo e construído na década de 1920. Somos vizinhos do primeiro arranha-céu de São Paulo, o Sampaio Moreira, que hoje parece pequeno, mas antigamente era cercado apenas por casas.</span></p>
+        <p><span class="plantin">A fachada é tombada. O prédio foi desenhado pelo Ramos de Azevedo e construído na década de 1920. Somos vizinhos do primeiro arranha-céu de São Paulo, o Sampaio Moreira, que hoje parece pequeno, mas antigamente era cercado apenas por casas.</span> <span class="dia"><strong>Tomás Biagi Carvalho</strong></span></p>
         <p><span class="caption right desktop-only">Sacada e entrada do prédio, projetado por Ramos de Azevedo.</span></p>
       </div>
       <div class="col-md-8 pull-right show-smooth">
@@ -78,7 +78,7 @@ letter: "A"
   <div class="fixie-text-container">
     <div class="row margin-bottom">
       <div class="col-md-4 fixie-text show-smooth f-right">
-        <p><span class="plantin">Quase todos os móveis vieram da casa de uma tia, então até hoje parece que eu estou na casa dela. O aparador é do Geraldo de Barros, que desenhou essa linha de móveis para a Unilabor. O painel é um trabalho da Bruna Albuquerque, que produz as obras no lugar onde elas ficam expostas.</span></p>
+        <p><span class="plantin">Quase todos os móveis vieram da casa de uma tia, então até hoje parece que eu estou na casa dela. O aparador é do Geraldo de Barros, que desenhou essa linha de móveis para a Unilabor. O painel é um trabalho da Bruna Albuquerque, que produz as obras no lugar onde elas ficam expostas.</span> <span class="dia"><strong>Tomás Biagi Carvalho</strong></span></p>
         <p><span class="caption left desktop-only">Redação da revista Amarello.</span></p>
       </div>
       <div class="col-md-6 col-md-offset-2 margin-bottom show-smooth">
@@ -100,7 +100,7 @@ letter: "A"
   <div class="fixie-text-container">
     <div class="row margin-bottom">
       <div class="col-md-4 fixie-text show-smooth">
-        <p><span class="plantin">Não pensei muito em formatos quando fundei a Amarello, apenas que teria um tema por edição. Como a revista é minha, não existe muita formalidade e algumas coisas mudam de uma edição para outra. Faço muitos testes: incluo ideias e elementos e quando eles não funcionam, tiro na edição seguinte.</span></p>
+        <p><span class="plantin">Não pensei muito em formatos quando fundei a Amarello, apenas que teria um tema por edição. Como a revista é minha, não existe muita formalidade e algumas coisas mudam de uma edição para outra. Faço muitos testes: incluo ideias e elementos e quando eles não funcionam, tiro na edição seguinte.</span> <span class="dia"><strong>Tomás Biagi Carvalho</strong></span></p>
         <p><span class="caption right desktop-only">Edições antigas das revistas Amarello e Colors.</span></p>
       </div>
       <div class="col-md-8 pull-right show-smooth">
@@ -126,7 +126,7 @@ letter: "A"
   <div class="fixie-text-container">
     <div class="row margin-bottom">
       <div class="col-md-4 fixie-text show-smooth f-right">
-        <p><span class="plantin">Tenho certeza que são publicações mais trabalhadas, com tiragens limitadas e custo de produção menor que vão perdurar nesse impasse do digital. A popularidade de feiras de publicações independentes mostram como as pessoas estão informadas sobre o mercado editorial.</span></p>
+        <p><span class="plantin">Tenho certeza que são publicações mais trabalhadas, com tiragens limitadas e custo de produção menor que vão perdurar nesse impasse do digital. A popularidade de feiras de publicações independentes mostram como as pessoas estão informadas sobre o mercado editorial.</span> <span class="dia"><strong>Tomás Biagi Carvalho</strong></span></p>
         <p><span class="caption left desktop-only">Detalhes da redação.</span></p>
       </div>
       <div class="col-md-8 margin-bottom show-smooth">
