--- a/app/_posts/2015-03-01-Fluxo.md
+++ b/app/_posts/2015-03-01-Fluxo.md
@@ -67,7 +67,7 @@ letter: "F"
   <div class="fixie-text-container">
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text f-right">
-        <p><span class="plantin">O Fluxo é uma tentativa de descobrir como viabilizar a produção jornalística nesse mercado instável. Quero misturar ideias da mídia tradicional, para que nosso conteúdo seja consistente, com inovações de modelo e distribuição que aprendi na Mídia Ninja.</span></p>
+        <p><span class="plantin">O Fluxo é uma tentativa de descobrir como viabilizar a produção jornalística nesse mercado instável. Quero misturar ideias da mídia tradicional, para que nosso conteúdo seja consistente, com inovações de modelo e distribuição que aprendi na Mídia Ninja.</span> <span class="dia"><strong>Bruno Torturra</strong></span></p>
         <p><br><span class="caption left desktop-only">Detalhes da área de trabalho do jornalista Bruno Torturra.</span></p>
       </div>
       <div class="col-md-4 col-md-offset-4 show-smooth">
@@ -93,7 +93,7 @@ letter: "F"
   <div class="fixie-text-container">
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text">
-        <p><span class="plantin">Esse é o território mais interessante, estratégico e menosprezado de São Paulo, a gema da cidade do ponto de vista do urbanismo. Principalmente o Anhangabaú, que possui o maior espaço livre de carros da cidade, mas mesmo assim é fácil de chegar.</span></p>
+        <p><span class="plantin">Esse é o território mais interessante, estratégico e menosprezado de São Paulo, a gema da cidade do ponto de vista do urbanismo. Principalmente o Anhangabaú, que possui o maior espaço livre de carros da cidade, mas mesmo assim é fácil de chegar.</span> <span class="dia"><strong>Bruno Torturra</strong></span></p>
         <p><br><span class="caption right desktop-only">Mapas de São Paulo e do Brasil.</span></p>
       </div>
       <div class="col-md-4 f-right col-md-offset-right-4 show-smooth">
@@ -119,7 +119,7 @@ letter: "F"
   <div class="fixie-text-container">
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text f-right">
-        <p><span class="plantin">O movimento em direção ao centro é cultural e geracional, não apenas econômico. A nossa geração está olhando para a cidade com mais atenção. E quando você começa a fazer isso, o centro salta à vista como o lugar a ser ocupado.</span></p>
+        <p><span class="plantin">O movimento em direção ao centro é cultural e geracional, não apenas econômico. A nossa geração está olhando para a cidade com mais atenção. E quando você começa a fazer isso, o centro salta à vista como o lugar a ser ocupado.</span> <span class="dia"><strong>Bruno Torturra</strong></span></p>
         <p><br><span class="caption left desktop-only">Pôster de um evento cultural organizado pelo Eduqativo, vizinho de prédio do Fluxo.</span></p>
       </div>
       <div class="col-md-8 show-smooth">
@@ -139,7 +139,7 @@ letter: "F"
   <div class="fixie-text-container">
     <div class="row margin-bottom">
       <div class="col-md-4 show-smooth fixie-text">
-        <p><span class="plantin">O efeito negativo desse movimento é a gentrificação. Esse processo acontece em outros bairros, é perigoso e precisa ser controlado. Mas acho injusto falar que esteja acontecendo no centro. Trazer a economia criativa é aumentar a diversidade da região com coisas que não existiam aqui antes.</span></p>
+        <p><span class="plantin">O efeito negativo desse movimento é a gentrificação. Esse processo acontece em outros bairros, é perigoso e precisa ser controlado. Mas acho injusto falar que esteja acontecendo no centro. Trazer a economia criativa é aumentar a diversidade da região com coisas que não existiam aqui antes.</span> <span class="dia"><strong>Bruno Torturra</strong></span></p>
         <p><br><span class="caption right desktop-only">O Fluxo fica no segundo andar do Farol, um prédio-coletivo no Anhangabaú.</span></p>
       </div>
       <div class="col-md-6 f-right col-md-offset-right-2 show-smooth">
