Update intro text for Pivô.

--- a/app/_posts/2015-03-01-Pivo.md
+++ b/app/_posts/2015-03-01-Pivo.md
@@ -20,10 +20,8 @@ letter: "P"
 <div class="container">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <p>Por estar localizado dentro do Copan, o próprio <a href="http://www.pivo.org.br/" target="_blank">Pivô</a> tem um pouco de obra de arte. Quem anda pelo centro cultural, inaugurado em 2012, entre obras de arte contemporânea e a arquitetura de Oscar Niemeyer, dificilmente imagina que no passado o lugar abrigou um hospital dentário e uma agência de banco.</p>
-      <p>“Eu queria um lugar para fazer meu ateliê, mas o proprietário cedeu para um espaço cultural sem fins lucrativos. Ou seja, eu não estava pensando em criar um centro cultural, ele nasceu para o espaço”, explica a artista Fernanda Brenner.</p>
-      <p>Ciente do lugar que ocupa no centro, ela incentiva os artistas que expõem no espaço a reagirem não só ao edifício — “uma micro-cidade dentro de São Paulo” — como também ao complexo contexto social da região.</p>
-      <p>Foi o caso da exposição <a href="http://www.pivo.org.br/exposicoes/pivo-e-a-rua/" target="_blank">Pivô é a Rua</a>, que acabou interagindo com os participantes das manifestações de junho de 2013 e outros personagens dos arredores. “Tivemos músicos da praça da República que vieram tocar aqui dentro, fizemos uma feira de produtos orgânicos, abrimos para os skatistas da praça Roosevelt.”</p>
+      <p>Por estar localizado dentro do Copan, o próprio <a href="http://www.pivo.org.br/" target="_blank">Pivô</a> tem um pouco de obra de arte. Quem anda pelo centro cultural, inaugurado em 2012, entre obras de arte contemporânea e a arquitetura de Oscar Niemeyer, dificilmente imagina que no passado o lugar abrigou um hospital dentário e uma agência de banco. “Eu queria um lugar para fazer meu ateliê, mas o proprietário cedeu para um espaço cultural sem fins lucrativos. Ou seja, eu não estava pensando em criar um centro cultural, ele nasceu para o espaço”, explica a artista Fernanda Brenner.</p>
+      <p>Ciente do lugar que ocupa no centro, ela incentiva os artistas que expõem no espaço a reagirem não só ao edifício — “uma micro-cidade dentro de São Paulo” — como também ao complexo contexto social da região. Foi o caso da exposição <a href="http://www.pivo.org.br/exposicoes/pivo-e-a-rua/" target="_blank">Pivô é a Rua</a>, que acabou interagindo com os participantes das manifestações de junho de 2013 e outros personagens dos arredores. “Tivemos músicos da praça da República que vieram tocar aqui dentro, fizemos uma feira de produtos orgânicos, abrimos para os skatistas da praça Roosevelt.”</p>
     </div>
   </div>
   <div class="location row">
